--- a/posts/JavaScript/2013-12-30-几个js库的中文文档.md
+++ b/posts/JavaScript/2013-12-30-几个js库的中文文档.md
@@ -1,4 +1,4 @@
 ##几个js库的中文文档
 
-[backbone](http://www.css88.com/doc/backbone/)、(underscore)[http://www.css88.com/doc/underscore/]
+[backbone](http://www.css88.com/doc/backbone/)、[underscore](http://www.css88.com/doc/underscore/)
 
