--- a/posts/life/2013-12-30-2013的总结.md
+++ b/posts/life/2013-12-30-2013的总结.md
@@ -1,6 +1,7 @@
-#今年的总结
+#2013的总结
 ##收获
 估计就是从北京来到上海，虽然几经波折，一直到了6月份才来到上海，不过总算如愿以偿。
+重新开始寻找自我，以及对技术那澎湃的热情。
 
 ##思考
 越来年底，心里越浮躁，想要定位自己，但是始终没有找到合适的定位，但是要一直追寻下去，不要停下脚步。有时候太多时候没有回头路，早就应该明白，不要奢望幸运，应该自己创造机会，不断去探寻和尝试。
