--- a/posts/JavaScript/2013-12-30-几个js库的中文文档.md
+++ b/posts/JavaScript/2013-12-30-几个js库的中文文档.md
@@ -1,4 +1,11 @@
 ##几个js库的中文文档
 
-[backbone](http://www.css88.com/doc/backbone/)、[underscore](http://www.css88.com/doc/underscore/)
+###backbone
+[backbone](http://www.css88.com/doc/backbone/) 中文文档链接
+
+###unserscore
+[underscore](http://www.css88.com/doc/underscore/) 中文文档链接
+
+###zepto
+[zepto](http://www.css88.com/doc/zeptojs_api/) 中文文档链接
 
