--- a/posts/about/2013-12-30-关于我.md
+++ b/posts/about/2013-12-30-关于我.md
@@ -13,7 +13,8 @@
 * php, python, object-c, asp.net 均有所涉及了解
 
 ###联系方式
-QQ: 412465712
-mail: yuhongfei1001@163.com
-blog: [gitpress](http://blog.yhf369646796.gitpress.org/), [farman](http://farman.sinaapp.com)
-github: [http://github.com/yhf369646796](http://github.com/yhf369646796)
+QQ: 412465712  
+mail: yuhongfei1001@163.com  
+blog: [gitpress](http://blog.yhf369646796.gitpress.org/), [farman](http://farman.sinaapp.com)  
+github: [http://github.com/yhf369646796](http://github.com/yhf369646796)  
+resume: [http://resume.github.io/?yhf369646796](http://resume.github.io/?yhf369646796)
