--- a/posts/JavaScript/2013-12-30-几个js库的中文文档.md
+++ b/posts/JavaScript/2013-12-30-几个js库的中文文档.md
@@ -1,11 +1,12 @@
-##几个js库的中文文档
+#几个常用js库的中文文档
+此处仅为js api的中文文档，需要看源码的，可以自己去国外看源码.
 
-###backbone
+##backbone
 [backbone](http://www.css88.com/doc/backbone/) 中文文档链接
 
-###unserscore
+##unserscore
 [underscore](http://www.css88.com/doc/underscore/) 中文文档链接
 
-###zepto
+##zepto
 [zepto](http://www.css88.com/doc/zeptojs_api/) 中文文档链接
 
