--- a/posts/about/2013-12-30-关于我.md
+++ b/posts/about/2013-12-30-关于我.md
@@ -1,18 +1,18 @@
-##关于我
+#关于我
 写点啥好呢？
-身在魔都，我在 [百度](http://www.baidu.com)，不想每天混吃混喝等死，希望突破自我，热衷于互联网创业，有好的创业团队，请联系我。
+身在魔都，我在 [百度](http://www.baidu.com)，2014.04.01已经加入[携程](http://www.ctrip.com/)从事无线邮轮的研发，不想每天混吃混喝等死，希望突破自我，热衷于互联网创业（游戏，手机，电商行业优先考虑），如果你有好的创业团队，请联系我。
 
-###自我介绍
+##自我介绍
 喜欢前端，喜爱游戏动漫，热爱生活，喜欢研究，爱打羽毛球。
 从事前端5-6年了，想继续走下去。
 来自安徽，向往安静平和的生活。
 
-###擅长
+##擅长
 * 前端基本技能 css, html ,js
 * nodejs(关注开源项目，自己也会写一些小项目)
 * php, python, object-c, asp.net 均有所涉及了解
 
-###联系方式
+##联系方式
 QQ: 412465712  
 mail: yuhongfei1001@163.com  
 blog: [gitpress](http://blog.yhf369646796.gitpress.org/), [farman](http://farman.sinaapp.com)  
