--- a/posts/about/2013-12-30-关于我.md
+++ b/posts/about/2013-12-30-关于我.md
@@ -1,6 +1,7 @@
 #关于我
 写点啥好呢？
 身在魔都，我在 [百度](http://www.baidu.com)，2014.04.01已经加入[携程](http://www.ctrip.com/)从事无线邮轮的研发，不想每天混吃混喝等死，希望突破自我，热衷于互联网创业（游戏，手机，电商行业优先考虑），如果你有好的创业团队，请联系我。
+希望从事纯nodejs或object-c开发工作。
 
 ##自我介绍
 喜欢前端，喜爱游戏动漫，热爱生活，喜欢研究，爱打羽毛球。
