--- a/posts/about/2013-12-30-关于我.md
+++ b/posts/about/2013-12-30-关于我.md
@@ -8,14 +8,16 @@
 从事前端5-6年了，想继续走下去。
 来自安徽，向往安静平和的生活。
 
-##擅长
-* 前端基本技能 css, html ,js
-* nodejs(关注开源项目，自己也会写一些小项目)
+##掌握技能
+* 熟悉前端技能语言 css3, html5, js.
+* 熟悉各种项目版本管理工具svn, git.
+* 熟练nodejs(关注开源项目，自己也会写一些项目)
 * php, python, object-c, asp.net 均有所涉及了解
+* Linux, Macos, Windows均可以正常开发工作.
 
 ##联系方式
 QQ: 412465712  
-mail: yuhongfei1001@163.com  
+mail: [yuhongfei1001@163.com](mailto:yuhongfei1001@163.com)  
 blog: [gitpress](http://blog.yhf369646796.gitpress.org/), [farman](http://farman.sinaapp.com)  
 github: [http://github.com/yhf369646796](http://github.com/yhf369646796)  
 resume: [http://resume.github.io/?yhf369646796](http://resume.github.io/?yhf369646796)
