--- a/posts/life/2013-12-30-2013的总结.md
+++ b/posts/life/2013-12-30-2013的总结.md
@@ -8,8 +8,10 @@
 
 ##实践项目
 年底之前，实践了几个自己的项目
-* [篮球项目](https://github.com/yhf369646796/basketball)
-* [html5游戏](https://github.com/yhf369646796/html5-game)
-* [音乐盒](https://github.com/yhf369646796/music-box)  
+* [篮球项目](https://github.com/FarmanYu/NBA-Analyse)
+* [html5游戏](https://github.com/FarmanYu/blockpuzzle)
+* [音乐盒](https://github.com/FarmanYu/Music-Player)  
+* [本地模拟数据](https://github.com/FarmanYu/localMock)
+
 自己的技术底子还太薄弱，还需要花更多时间和精力专注技术。
 继续努力去实践，才能做好这一切。
