--- a/posts/life/2014-0515-forwork.md
+++ b/posts/life/2014-0515-forwork.md
@@ -84,7 +84,7 @@
  
 总之，不论你的老板有多吝啬多苛刻，你都不能以此为由放弃努力。因为，我们不仅是为了目前的薪水而工作，我们还要为将来的薪水而工作，为自己的未来而工作。一句话，薪水算什么？我们要为自己而工作。     
  
-世界上大多数人都在为薪水而工作，如果你能不为薪水而工作，你就超越了芸芸众生，也就迈出了成功的第一步。&nbsp&nbsp&nbsp&nbsp     
+世界上大多数人都在为薪水而工作，如果你能不为薪水而工作，你就超越了芸芸众生，也就迈出了成功的第一步。     
  
 为什么要努力工作 比尔?盖茨为什么还要工作     
  
@@ -112,7 +112,7 @@
  
 热情是梦想飞行的必备燃料。这种燃料一旦被点燃，将让你的引擎在飞行期间生气勃勃地持续运转。有史以来，热情驱使着世界上最杰出的人士，为追求“自我实现”而在他迷恋的领域里到达了人类成就的巅峰，同时推动着社会的进步。就让热情也为你做同样的事吧。     
  
-即使你还没有达到自我实现的境界，你也不要麻痹自己——告诉自己工作就是为了赚钱。不要对自己说：“既然老板给的少，我就少干，没必要费心地去完成每一个任务。”或者安慰自己：“算了，我技不如人，能拿到这些薪水也知足了。”而应该牢记，金钱只不过是许多种报酬中的一种，你所追求的是自我提高，所以要保持积极的工作态度。消极的思想会让你看不到自己的潜力，会让你失去前进的动力和信心，会让你放弃很多宝贵的机会，使你与成功失之交臂，也永远无法达到自我实现。&nbsp&nbsp&nbsp&nbsp     
+即使你还没有达到自我实现的境界，你也不要麻痹自己——告诉自己工作就是为了赚钱。不要对自己说：“既然老板给的少，我就少干，没必要费心地去完成每一个任务。”或者安慰自己：“算了，我技不如人，能拿到这些薪水也知足了。”而应该牢记，金钱只不过是许多种报酬中的一种，你所追求的是自我提高，所以要保持积极的工作态度。消极的思想会让你看不到自己的潜力，会让你失去前进的动力和信心，会让你放弃很多宝贵的机会，使你与成功失之交臂，也永远无法达到自我实现。     
  
 为什么要努力工作 认真工作是真正的聪明     
  
@@ -160,7 +160,7 @@
  
 无论你做什么工作，无论你面对的工作环境是松散还是严谨，你都应该认真工作，不要老板一转身就开始偷懒，没有监督就没有工作。你只有在工作中锻炼自己的能力，使自己不断提高，加薪升职的事才能落到你头上。反之，如果你凡事得过且过，从不认真工作，那你就会被老板豪不犹豫地排斥在他的选择之外。     
  
-现在的老板非常青睐认真工作的员工，并给予很多的机会。老板往往会这样鼓励员工：“认真干吧！把你的能力都发挥出来，还有更多的重任等着你呢！”他的意思就是说：“认真工作吧，我会给你增加工资的。”当老板让你做更多的更重要的工作时，你的工资自然会提高，你的职业机会大门也就徐徐拉开了。&nbsp&nbsp&nbsp&nbsp     
+现在的老板非常青睐认真工作的员工，并给予很多的机会。老板往往会这样鼓励员工：“认真干吧！把你的能力都发挥出来，还有更多的重任等着你呢！”他的意思就是说：“认真工作吧，我会给你增加工资的。”当老板让你做更多的更重要的工作时，你的工资自然会提高，你的职业机会大门也就徐徐拉开了。     
  
 为什么要努力工作 今天工作不努力，明天努力找工作(1)     
  
@@ -206,7 +206,7 @@
  
 当我们拒绝成长，才会感觉到成长痛苦不堪。上天通常都是先用温和的报警来提醒我们，但当我们对他的报警置之不理时，他老人家就会重重地敲下一锤来。     
  
-从平凡的工作中脱颖而出，与其说是由个人的才能决定，不如说取决于个人的进取心态。这个世界为那些努力工作的人大开绿灯，直到他生命的终结。&nbsp&nbsp&nbsp&nbsp     
+从平凡的工作中脱颖而出，与其说是由个人的才能决定，不如说取决于个人的进取心态。这个世界为那些努力工作的人大开绿灯，直到他生命的终结。     
  
 为什么要努力工作 今天工作不努力，明天努力找工作(2)     
  
@@ -256,7 +256,7 @@
  
 年轻人常常有几分傲气，如果再有较好的学历，比人高一等的本领，傲气当然就更盛了。他们对工作的理想太高，往往高不成低不就。基于这种心理，这些表面上看起来优秀的青年人，往往会对已有的工作感到不满，稍遇挫折或被老板或主管说了几句，就兴起“拂袖而去”的念头。     
  
-大部分年轻人不能清晰地意识到，自己手头的平凡工作就是一座丰富的钻石矿，只要好好挖掘——全力以赴、尽职尽责地做好目前所做的工作，就能找到属于自己的“钻石”——包括职位的上升和财富的增加。相反，许多人心态浮躁，他们总想：“做这份工作，有什么希望可言？”“混呗，干这差使能有什么出头之日？！”对工作心灰意冷的人，不可能踏踏实实地做好本职工作。他们坚信世界上有很多挣钱或者成功的机会，于是他们焦急地等待，等待另外的时间，另外的地点，另外的行业，另外的工作职位，但决不是现在，决不是手头上这个日久生厌的工作；他们知道如何在将来提高自己，但却不珍惜眼前的机会。他们像故事中的阿里·哈法德一样，在漠视自己的工作中抛弃了本应属于自己的宝藏。&nbsp&nbsp&nbsp&nbsp     
+大部分年轻人不能清晰地意识到，自己手头的平凡工作就是一座丰富的钻石矿，只要好好挖掘——全力以赴、尽职尽责地做好目前所做的工作，就能找到属于自己的“钻石”——包括职位的上升和财富的增加。相反，许多人心态浮躁，他们总想：“做这份工作，有什么希望可言？”“混呗，干这差使能有什么出头之日？！”对工作心灰意冷的人，不可能踏踏实实地做好本职工作。他们坚信世界上有很多挣钱或者成功的机会，于是他们焦急地等待，等待另外的时间，另外的地点，另外的行业，另外的工作职位，但决不是现在，决不是手头上这个日久生厌的工作；他们知道如何在将来提高自己，但却不珍惜眼前的机会。他们像故事中的阿里·哈法德一样，在漠视自己的工作中抛弃了本应属于自己的宝藏。     
  
 你珍惜目前的工作机会了吗 钻石就在你家后院(2)     
  
@@ -264,7 +264,7 @@
  
 其实，即使在极其平凡的职业中、极其低微的位置上，也往往藏着极大的机会。只要把自己的工作，做得比别人更专注、更迅速、更正确、更完美；只要调动自己全部的智力，从旧事中找出新方法来，便能引起别人的注意，从而使自己有发挥本领的机会。无论做什么工作，只要沉下心来，脚踏实地地去做，都能得到收获。一个人把时间花在什么地方，就会在那里看到成绩，只要你的努力是持之以恒的。     
  
-看看自己脚下的土地吧！其实，每一份工作都是一座丰富的钻石矿。年轻人在展望未来的时候，不要浮躁，务必要认识到自己正在拥有的一切。至少在任何工作转换之前，都要努力使自己专注于手中的具体工作，哪怕是看似平凡的琐碎工作。&nbsp&nbsp&nbsp&nbsp     
+看看自己脚下的土地吧！其实，每一份工作都是一座丰富的钻石矿。年轻人在展望未来的时候，不要浮躁，务必要认识到自己正在拥有的一切。至少在任何工作转换之前，都要努力使自己专注于手中的具体工作，哪怕是看似平凡的琐碎工作。     
  
 你珍惜目前的工作机会了吗 缺少机会是浮躁之人的借口     
  
@@ -304,7 +304,7 @@
  
 成功者不善于也不需要编织任何借口，因为他们能为自己的行为和目标负责，也能享受自己努力的成果。缺少机会，则往往是不愿意付出努力的人用来原谅自己的借口。     
  
-在极其平凡的职业中，在极其低微的岗位上，也时常蕴藏着巨大的机会。只要调动自己全部的智力，全力以赴；只要勤勤恳恳地把自己的工作做得比别人更完美，就能发现机遇，推开通往成功的大门。&nbsp&nbsp&nbsp&nbsp     
+在极其平凡的职业中，在极其低微的岗位上，也时常蕴藏着巨大的机会。只要调动自己全部的智力，全力以赴；只要勤勤恳恳地把自己的工作做得比别人更完美，就能发现机遇，推开通往成功的大门。     
  
 你珍惜目前的工作机会了吗 两个以上的目标等于没有目标     
  
@@ -338,7 +338,7 @@
  
 当然，年轻人在事业的开端有多个目标是很正常的。这好比罗盘指针在被磁化之前所指的方向是不确定的，只有在被磁石磁化而具有特殊属性之后，才成为罗盘。同样，一个人一开始可能确定不了自己的方向，在经过一段时间的摸索，他最终就会，也必须确定一个自己发展的目标。     
  
-如果确定的目标被证明是正确的，那就应该像卫星导航船一样，坚定不移地为目标而奋斗。风平浪静时，卫星导航船将一直朝着它要到达的港口航行，当风起云涌时，卫星导航船即使在狂风暴雨中也会一直坚持着它的航线。卫星导航船在海中航行时永远只会看到一样东西，那就是它所要到达的港口。不管天气怎么样，或者它遇到什么样的困难，它到达港口的时间会在几小时之内就被预测出来。一艘想到达波士顿的船决不会在纽约出现。&nbsp&nbsp&nbsp&nbsp     
+如果确定的目标被证明是正确的，那就应该像卫星导航船一样，坚定不移地为目标而奋斗。风平浪静时，卫星导航船将一直朝着它要到达的港口航行，当风起云涌时，卫星导航船即使在狂风暴雨中也会一直坚持着它的航线。卫星导航船在海中航行时永远只会看到一样东西，那就是它所要到达的港口。不管天气怎么样，或者它遇到什么样的困难，它到达港口的时间会在几小时之内就被预测出来。一艘想到达波士顿的船决不会在纽约出现。     
  
 你珍惜目前的工作机会了吗 对工作心怀感激     
  
@@ -368,7 +368,7 @@
  
 我规劝那些牢骚满腹的年轻人，将目光从别人的身上转移到自己手中的工作上，心怀对工作的感激之情，多花一些时间，想想自己还有哪些需要提高和进步的地方，看看自己的工作是否已经做得很完美了。如果你每天能带着一颗感恩的心而不是挑剔的眼光去工作，相信工作时的心情自然是愉快而积极的，工作的结果也将大不相同。     
  
-带着一种从容坦然、喜悦的感恩心情工作吧，你会获取最大的成功的。&nbsp&nbsp&nbsp&nbsp     
+带着一种从容坦然、喜悦的感恩心情工作吧，你会获取最大的成功的。     
  
 你珍惜目前的工作机会了吗 时刻准备着，当机会来临时你就成功了     
  
@@ -392,7 +392,7 @@
  
 每一天，都要尽心尽力地工作，每一件小事情，都要力争高效地完成。尝试着超越自己，努力做一些份外的事情，不是为了看到老板的笑脸，而是为了自身的不断进步。即或是在同一个公司或同一个职位上，机遇没有光临，但在你为机会的来临而时时准备的行动中，你的能力已经得到了扩展和加强，实际上，你已经为未来某一个时间创造出了另一个机遇。     
  
-谨记哈佛校训：时刻准备着，当机会来临时你就成功了。&nbsp&nbsp&nbsp&nbsp     
+谨记哈佛校训：时刻准备着，当机会来临时你就成功了。     
  
 敬业，最完美的工作态度 态度就是竞争力     
  
@@ -440,7 +440,7 @@
  
 事实上，不管你所工作的机构有多庞大，甚至也不管它有多么糟糕，每个人在这个机构中，都能有所作为。某些上司可能对员工的工作设置障碍，或对员工的出色表现视而不见，或者不能充分赏识和鼓励；也有一些上司愿意对员工进行培训，改善他们的业绩，并给予鼓励。但不管环境的利弊，最终，卓越的工作表现，都需要积极的态度。     
  
-一开始，你会觉得坚持这种态度很不容易，但最终你会发现这种态度会成为你个人价值的一部分。而当你体验到他人的肯定给你的工作和生活所带来的帮助时，你就会一如既往地秉持这种态度做事。&nbsp&nbsp&nbsp&nbsp     
+一开始，你会觉得坚持这种态度很不容易，但最终你会发现这种态度会成为你个人价值的一部分。而当你体验到他人的肯定给你的工作和生活所带来的帮助时，你就会一如既往地秉持这种态度做事。     
  
 敬业，最完美的工作态度 工作中无小事(1)     
  
@@ -472,7 +472,7 @@
  
 任何事情就怕养成习惯。据说，柏拉图因为一个小孩玩一个荒唐的游戏而责备他。小孩子说：“就因为这点小事，你就责备我？”柏拉图回答说：“如果养成了习惯，可就不是件小事了。”如果你懒得尽心做小事，养成了马虎懒散的工作作风，那情形会更糟。当你能胜任的大事摆在你面前时，你可能会不由自控地以一贯的作风去做它，结果可想而知。     
  
-大事是由众多的小事积累而成的，忽略了小事就难成大事。从小事开始，逐渐锻炼意志，增长智慧，日后才能做大事，而眼高手低者，是永远干不成大事的。通过小事，可以折射出你的综合素质，以及你区别于他人的特点。从干小事中见精神，得认可，“以小见大”“见微知著”，赢得人们的信任了，你才能得到干大事的机会。&nbsp&nbsp&nbsp&nbsp     
+大事是由众多的小事积累而成的，忽略了小事就难成大事。从小事开始，逐渐锻炼意志，增长智慧，日后才能做大事，而眼高手低者，是永远干不成大事的。通过小事，可以折射出你的综合素质，以及你区别于他人的特点。从干小事中见精神，得认可，“以小见大”“见微知著”，赢得人们的信任了，你才能得到干大事的机会。     
  
 敬业，最完美的工作态度 工作中无小事(2)     
  
@@ -482,7 +482,7 @@
  
 工作中无小事。每一件事都值得我们去做。即使是最普通的事，也不应该敷衍应付或轻视懈怠，相反，应该付出你的热情和努力，多关注怎样把工作做得最好，全力以赴、尽职尽责地去完成，养成良好的职业素养。     
  
-许多与我们同时起步的人，和我们一样做着简单的小事，后来逐步晋升于我们之上，原因之一是他们从不认为他们所做的事是简单的小事。&nbsp&nbsp&nbsp&nbsp     
+许多与我们同时起步的人，和我们一样做着简单的小事，后来逐步晋升于我们之上，原因之一是他们从不认为他们所做的事是简单的小事。     
  
 敬业，最完美的工作态度 心中常存责任感(1)     
  
@@ -518,13 +518,13 @@
  
 一个有责任感的员工，不仅仅要完成他自己分内的工作，而且他会时时刻刻为企业着想。老板也会为拥有能够如此关爱自己的企业，关注着企业的发展的员工感到骄傲，也只有这样的员工才能够得到企业的信任。事实上，只有那些能够勇于承担责任、具有很强责任感的人，才有可能被赋予更多的使命，才有资格获得更大的荣誉。     
  
-对待工作，是充满责任感、尽自己最大的努力，还是敷衍了事，这一点正是事业成功者和事业失败者的分水岭。事业有成者无论做什么，都力求尽心尽责，丝毫不会放松；成功者无论做什么职业，都不会轻率疏忽。&nbsp&nbsp&nbsp&nbsp     
+对待工作，是充满责任感、尽自己最大的努力，还是敷衍了事，这一点正是事业成功者和事业失败者的分水岭。事业有成者无论做什么，都力求尽心尽责，丝毫不会放松；成功者无论做什么职业，都不会轻率疏忽。     
  
 敬业，最完美的工作态度 心中常存责任感(2)     
  
 在某一个时刻或某一段时间，我们总是有着责任感的，否则不可能完成自己的工作。但让责任感成为我们脑海中一种强烈的意识，深入到工作中的每一点每一滴，并一直坚持下去却十分困难，因为在坚持的过程中，诱惑太多。不是所有的时候，理智能战胜感情；也不是所有时候，责任感能战胜懒散。     
  
-不管怎样，责任感必须培养，也完全可以培养。注意工作中的细节就有助于责任感的养成。一个书店的营业员能勤擦拭书架上的灰尘，一家公交公司的司机，能让车天天保持整洁，渐渐地就会习惯成自然。当责任感成为一种习惯，成了一个人的生活态度，我们就会自然而然地担负起责任，而不是刻意的去做。当一个人自然而然地做一件事情时，当然不会觉得麻烦和累。当你意识到责任在召唤你的时候，你就会随时为责任而放弃别的什么东西，而且你不会觉得这种放弃对你来讲很艰难。&nbsp&nbsp&nbsp&nbsp     
+不管怎样，责任感必须培养，也完全可以培养。注意工作中的细节就有助于责任感的养成。一个书店的营业员能勤擦拭书架上的灰尘，一家公交公司的司机，能让车天天保持整洁，渐渐地就会习惯成自然。当责任感成为一种习惯，成了一个人的生活态度，我们就会自然而然地担负起责任，而不是刻意的去做。当一个人自然而然地做一件事情时，当然不会觉得麻烦和累。当你意识到责任在召唤你的时候，你就会随时为责任而放弃别的什么东西，而且你不会觉得这种放弃对你来讲很艰难。     
  
 敬业，最完美的工作态度 有些事，不必老板交代(1)     
  
@@ -586,7 +586,7 @@
  
 与他们形成鲜明对比的是像汤姆那样只做老板交代的事的人。他们不但不会主动去做老板没有交待的工作，甚至老板交待的工作也要一再督促才能勉强做好。这种被动的态度自然会导致一个人的积极性和工作效率下降。久而久之，即使是被交待甚至是一再交待的工作也未必能把它做好。这样的员工，别人不禁要发问：他怎么会这样？究竟还有没有一点点的工作力？他还能干什么？     
  
-他们或许可以躲过裁员，却很难得到晋升的机会。道理很简单，如果你只是尽本分，或者唯唯诺诺，对公司的发展前景漠不关心，你就无法获得额外的报酬，你只能得到属于你应得的那一部分——当然，这比你想象的要少。&nbsp&nbsp&nbsp&nbsp     
+他们或许可以躲过裁员，却很难得到晋升的机会。道理很简单，如果你只是尽本分，或者唯唯诺诺，对公司的发展前景漠不关心，你就无法获得额外的报酬，你只能得到属于你应得的那一部分——当然，这比你想象的要少。     
  
 敬业，最完美的工作态度 有些事，不必老板交代(2)     
  
@@ -594,7 +594,7 @@
  
 没有人会告诉你需要做的事，这都靠你自己主动思考，在主动地工作的背后，需要你付出的是比别人多得多的智慧、热情、责任、想像力和创造力。当你清楚地了解公司的发展规划和你的工作职责，就能预知该做些什么，然后立刻着手去做，不必等到老板交代。     
  
-如果想登上成功之梯的最高阶，你就必须永远保持主动率先的精神，纵使面对缺乏挑战或毫无乐趣的工作。当你养成这种主动的习惯时，你就以行动证明了自己是一个勇于承担责任、值得信赖的人，一个有可能成为老板和领导者的人。&nbsp&nbsp&nbsp&nbsp     
+如果想登上成功之梯的最高阶，你就必须永远保持主动率先的精神，纵使面对缺乏挑战或毫无乐趣的工作。当你养成这种主动的习惯时，你就以行动证明了自己是一个勇于承担责任、值得信赖的人，一个有可能成为老板和领导者的人。     
  
 敬业，最完美的工作态度 接受工作的全部，不只是益处和快乐     
  
